--- a/templates/abstract.html
+++ b/templates/abstract.html
@@ -19,6 +19,9 @@
 		  <li class="nav-item active">
 			<a class="nav-link" href="/abstract">Abstract search<span class="sr-only">(current)</span></a>
 		  </li>
+		  <li class="nav-item ">
+			<a class="nav-link" href="/fpgrowth">FPGrowth search</a>
+		  </li>
 		</ul>
 	  </div>
 	</nav>
