--- a/templates/paper.html
+++ b/templates/paper.html
@@ -7,7 +7,7 @@
 {% block body %}
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  <a class="navbar-brand" href="#">Topic Recommender System</a>
+	  <a class="navbar-brand" href="/">Topic Recommender System</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	  </button>
@@ -19,6 +19,9 @@
 		  </li>
 		  <li class="nav-item">
 			<a class="nav-link" href="/abstract">Abstract search</a>
+		  </li>
+		  <li class="nav-item ">
+			<a class="nav-link" href="/fpgrowth">FPGrowth search</a>
 		  </li>
 		</ul>
 	  </div>
@@ -40,8 +43,8 @@
                 <td>{{ val["id"] }}</td>
                 <td>{{ val["title"] }}</td>
                 <td>{{ val["n_citation"] }}</td>
-				{% if val['doi'] not in [None,""] %}
-                <td><a href="https://www.doi.org/{{ val['doi'] }}">Go To Page {{ val['doi'] }}</a></td>
+				{% if 'doi' in val %}
+                <td><a href="https://www.doi.org/{{ val['doi'] }}">Go To Page</a></td>
 				{% else %}
 				<td></td>
 				{% endif %}
