--- a/templates/index.html
+++ b/templates/index.html
@@ -13,14 +13,17 @@
 
 	  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 		<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-		  <li class="nav-item active">
-			<a class="nav-link" href="/">Topic Search<span class="sr-only">(current)</span></a>
+		  <li class="nav-item active dropdown">
+			 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				Topic Search
+			</a>
+			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+				<a class="nav-link active" href="/">Normal Search<span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="/fpgrowth">Advanced search</a>
+			</div>
 		  </li>
 		  <li class="nav-item">
 			<a class="nav-link" href="/abstract">Abstract search</a>
-		  </li>
-		  <li class="nav-item ">
-			<a class="nav-link" href="/fpgrowth">FPGrowth search</a>
 		  </li>
 		</ul>
 	  </div>
@@ -49,7 +52,7 @@
 							<tr>
 								<th scope="row">{{ loop.index0+1 }}</th>
 								<td>{{ value }}</td>
-								<td><a href="{{url_for('paper',val = value)}}">View relevant papers</a></td>
+								<td><a href="{{url_for('paper',val = value)}}">View relevant resources</a></td>
 							</tr>
 						{% endfor %}
 					{% endif %}
